--- a/source/pom.xml
+++ b/source/pom.xml
@@ -51,6 +51,21 @@
 				</executions>
 			</plugin>
 
+		<!--  attach source jar to it -->
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-source-plugin</artifactId>
+			<version>3.0.1</version>
+			<executions>
+			  <execution>
+				<id>attach-sources</id>
+				<goals>
+				  <goal>jar</goal>
+				</goals>
+			  </execution>
+			</executions>
+		</plugin>
+
 
 		</plugins>
 
