--- a/source/pom.xml
+++ b/source/pom.xml
@@ -4,9 +4,13 @@
 	<groupId>wu.justa</groupId>
 	<artifactId>object-tree-creator</artifactId>
 	<packaging>jar</packaging>
-	<version>1.2</version>
+	<version>1.3</version>
 	<name>Object Tree creator</name>
 	<url>https://github.com/Justin01Wu/ObjectTreeCreator/tree/master</url>
+	<description>
+	release notes:  
+		1.3 fix some primitives issues
+	</description>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
